# warpcoil

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py  prepare_for_build_with_msvc.sh
benchmarks/: CMakeLists.txt  benchmark_interface.cpp  benchmark_interface.hpp  byte_counter.hpp  in_process.cpp  in_process_pipe.hpp  local_socket.cpp  main.cpp
example/: CMakeLists.txt  hello_demo.cpp  hello_interface.cpp  hello_tcp.cpp  hello_tcp_callback.cpp  hello_tcp_coroutine.cpp  hello_tcp_coroutine_hack.cpp  hello_websocket.cpp
example_future/: CMakeLists.txt  example_future.cpp
example_web_site/: CMakeLists.txt  index.html  index.js  web_site_interface.cpp  web_site_interface.hpp  web_site_server.cpp
examples/: CMakeLists.txt  hello.cpp
test/: CMakeLists.txt  asio_spawn.cpp  asio_spawn_future.cpp  asynchronous.cpp  begin_parse_value.cpp  bidirectional.cpp  boost_print_log_value.hpp  buffered_writer.cpp  checkpoint.hpp  cpp.cpp  encoding.cpp  failing_test_interface.hpp  file_api.cpp  impl_test_interface.hpp  invalid_encoding.cpp  javascript.cpp  memory.cpp  memory.hpp  message_splitter.cpp  pipelining.cpp  synchronous.cpp  test_streams.hpp  use_generated_interface.cpp  valid_encoding.cpp  wait_for_all.cpp  warpcoil.cpp  websocket.cpp
test_application/: CMakeLists.txt  generate.cpp  use.cpp
test_interfaces/: CMakeLists.txt  generate.cpp
warpcoil/: beast.hpp  beast_push_warnings.hpp  block.hpp  comma_separator.hpp  cpp.hpp  cpp_helpers.hpp  delegator_async_read_write_stream.hpp  delegators.hpp  future.hpp  identifier.hpp  javascript.hpp  make_vector.hpp  protocol.hpp  then.hpp  types.hpp  update_generated_file.hpp  warpcoil.hpp
warpcoil/cpp/: begin_parse_value.hpp  buffered_writer.hpp  client_pipeline.hpp  expected_response_registry.hpp  generate.hpp  handler_with_argument.hpp  helpers.hpp  integer_parser.hpp  invalid_input_error.hpp  message_splitter.hpp  parse_result.hpp  parser_for.hpp  request_operation.hpp  structure_parser.hpp  tuple_parser.hpp  utf8_parser.hpp  variant_parser.hpp  vector_parser.hpp  wrap_handler.hpp  write_integer.hpp
warpcoil/cpp/generate/: asynchronous.hpp  basics.hpp  client.hpp  comma_separator.hpp  eraser.hpp  everything.hpp  generate_interface.hpp  generate_name_for_structure.hpp  generate_parameters.hpp  generate_parser_type.hpp  generate_serializable_interface.hpp  generate_serialization_client.hpp  generate_serialization_server.hpp  generate_type.hpp  generate_type_eraser.hpp  generate_value_serialization.hpp  interface.hpp  parser.hpp  serialization.hpp  server.hpp  shared_code_generator.hpp  synchronous.hpp
