file(GLOB sources "*.hpp" "*.cpp")
file(GLOB_RECURSE headers "../warpcoil/*.hpp")
set(allSources ${sources} ${headers})
set(formatted ${formatted} ${allSources} PARENT_SCOPE)
set(generatedHeader ${CMAKE_BINARY_DIR}/generated.hpp)
if(EXISTS ${generatedHeader})
    set(allSources ${allSources} ${generatedHeader})
endif()
add_executable(benchmarks ${allSources})
target_link_libraries(benchmarks ${CONAN_LIBS} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(benchmarks test_app_header)
target_include_directories(benchmarks PRIVATE ${CMAKE_BINARY_DIR})
