file(GLOB sources "*.hpp" "*.cpp")
file(GLOB_RECURSE headers "../warpcoil/*.hpp")
set(allSources ${sources} ${headers})
set(formatted ${formatted} ${allSources} PARENT_SCOPE)
if(EXISTS ${generatedHeader})
    set(allSources ${allSources} ${generatedHeader})
endif()
add_executable(tests ${allSources})
target_link_libraries(tests ${CONAN_LIBS} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(tests generatedHeaderTarget)
target_include_directories(tests PRIVATE ${CMAKE_BINARY_DIR})
