file(GLOB sources "*.hpp" "*.cpp")
file(GLOB_RECURSE headers "../warpcoil/*.hpp")
set(allSources ${sources} ${headers})
set(formatted ${formatted} ${allSources} PARENT_SCOPE)
set(generatedHeader ${CMAKE_BINARY_DIR}/generated.hpp)
if(EXISTS ${generatedHeader})
    set(allSources ${allSources} ${generatedHeader})
endif()
add_executable(tests ${allSources})
target_link_libraries(tests ${CONAN_LIBS} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(tests test_app_header)
target_include_directories(tests PRIVATE ${CMAKE_BINARY_DIR})
